--- a/ps_spec.yaml
+++ b/ps_spec.yaml
@@ -468,6 +468,71 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/userInfo' 
+              examples: 
+                divorce-inform:
+                  summary: Example for scope = divorce-inform
+                  value:
+                    userInfoProfile:
+                      aanhef: "Dhr."
+                      initialen: "A.B."
+                      achternaam: "de Boer"
+                      voorkeursnaam: "A.B. de Boer"
+                      verwantschapType: "gehuwd"
+                      relatieStart: "2015-03-10"
+                      relatieEind: "2023-08-22"
+                divorce-confirm:
+                  summary: Example for scope = divorce-confirm
+                  value:
+                    userInfoIdentifier:
+                      klantnummer: 1234512344
+                      burgerServiceNummerEncrypted: "M@a7R0$I;"
+                    userInfoProfile:
+                      aanhef: "Dhr."
+                      initialen: "A.B."
+                      voornamen: "Jan"
+                      achternaam: "de Boer"
+                      voorkeursnaam: "A.B. de Boer"
+                      gender: "Man"
+                      geboortedatum: "1985-02-21"
+                      verwantschapType: "gehuwd"
+                      relatieStart: "2015-03-10"
+                      relatieEind: "2023-08-22"
+                    userInfoAddress:
+                      woonadres: "Hoofdweg 21a"
+                      woonplaats: "Amsterdam"
+                      regio: "Noord-Holland"
+                      postcode: "1234AB"
+                      land: "Nederland"
+                    userInfoContact:
+                      emailadres: "jandeboer@emailprovider.com"
+                      telefoonnummer: 31612345678
+                      bankrekeningnummer: "NL11RABO011111111"
+                    userInfoPensioen:
+                      polisnummerRegeling: 1234567890
+                      typeRegeling: "uitkeringsregeling"
+                      looptijdRegeling: "levenslang"
+                      regelingStartdatum: "2001-01-01"
+                      regelingEinddatum: "2008-01-01"
+                      deelnemerStatus: "actief"
+                    userInfoPartnerProfile:
+                      partnerKlantnummer: 1234512345
+                      aanhef: "Mevr."
+                      initialen: "C.D."
+                      voornamen: "Marie"
+                      achternaam: "van Gevelt"
+                      voorkeursnaam: "C.D. van Gevelt"
+                      gender: "female"
+                      geboortedatum: "1987-08-25"
+                    userInfoPartnerAddress:
+                      woonadres: "Hoofdweg 21a"
+                      woonplaats: "Amsterdam"
+                      regio: "Noord-Holland"
+                      postcode: "1234AB"
+                      land: "Nederland"
+                    userInfoPartnerContact:
+                      emailadres: "jandeboer@emailprovider.com"
+                      telefoonnummer: 31612345678
+                      bankrekeningnummer: "NL11RABO011111111"
         '400':
           description: Bad request 
           content:
